# manong-style

./: README.md  pyproject.toml
manong/: cli.py  formats.py  specs.py
samples/: 1.yaml  burberry.json  winter-2019.yaml
